# luxafor-ui

./: .gitignore  Cargo.toml  LICENSE  POST-INSTALL.md  README.md  Trunk.toml  index.html  shell.nix  styles.css  udev-cfg.sh
.github/workflows/: tauri-build.yml
luxafor_cmd_runner/: Cargo.toml
luxafor_cmd_runner/src/: lib.rs
luxafor_ui/: Cargo.toml
luxafor_ui/src/: main.rs
luxafor_ui/ui/: app-window.slint
src/: app.rs  main.rs
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/extra/: 99-luxafor-ui.rules
src-tauri/scripts/: reload-udev
src-tauri/src/: lib.rs  main.rs
udev-rule/: 99-luxafor-ui.rules
ui/: app-window.slint
