[package]
name = "luxafor-ui"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Robin Kristiansen <robin.kristiansen@hkdir.no>"]

[dependencies]
luxafor = { version = "0.3.0", features = ["usb"] }
slint = "1.8.0"
tao = "0.30.8"
tray-icon = "0.19.1"
image = "^0.25"

[build-dependencies]
slint-build = "1.8.0"

[dev-dependencies]
tao = "^0.30"
image = "^0.25"
