[package]
name = "luxafor-ui"
version = "0.1.0"
edition = "2021"
description = "Luxafor-ui"
authors = ["Robin Kristiansen"]
license = "MIT"
homepage = "https://github.com/nibrobb/luxafor-ui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "luxafor_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "config-toml"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
luxafor = { version = "0.3.0", default-features = false, features = ["usb"] }
